# ibus-xkb

./: Makefile.am  README  autogen.sh  configure.ac  ibus-xkb.pc.in  ibus-xkb.spec.in
bindings/: Makefile.am
bindings/vala/: Gkbd-3.0.metadata  IBusXKB-1.0.metadata  Makefile.am  Xkl-1.0.metadata  ibus-xkb-1.0.deps
data/: Makefile.am  ibus-xkb.schemas.in
data/dconf/: Makefile.am  make-dconf-override-db.sh  make-dconf-to-text.sh
engine/: Makefile.am  gensimple.py  main.vala  xkb.xml.in.in
engine/ibus-xkb/: Makefile.am  ibus-xkb-main.c  xkblib.c  xkblib.h
ibus/: Makefile.am  __init__.py  _config.py.in  xkblayout.py.in  xkbxml.py.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  bg.po  bn_IN.po  ca.po  da.po  de.po  en_GB.po  es.po  et.po  eu.po  fa.po  fr.po  gu.po  hi.po  hu.po  ia.po  ibus-xkb.pot  it.po  ja.po  kn.po  ko.po  lv.po  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt_BR.po  ru.po  sr.po  sr@latin.po  ta.po  te.po  tg.po  (+5 more)
setup/: Makefile.am  engineabout.py  enginecombobox.py  enginetreeview.py  i18n.py  ibus-setup-xkb.desktop.in  ibus-setup-xkb.in  icon.py  keyboardshortcut.py  main.py  setup.ui  xkbsetup.py
src/: Makefile.am  ibusxkbtypes.h  ibusxkbxml.c  ibusxkbxml.h
ui/: Makefile.am
ui/gtk2/: Makefile.am  candidatepanel.py  engineabout.py  handle.py  i18n.py  ibus-ui-gtk.in  icon.py  languagebar.py  main.py  menu.py  notifications.py  panel.py  propitem.py  toolitem.py
ui/gtk3/: Makefile.am  application.vala  candidatearea.vala  candidatepanel.vala  gkbdlayout.vala.false  gkbdlayout.vala.true  grabkeycode.c  gtkxkbpanel.xml.in.in  handle.vala  iconwidget.vala  panel.vala  pango.vala  property.vala  separator.vala  switcher.vala  xkblayout.vala
xkb/: Makefile.am  gtkimcontextsimpleseqs.h  ibus-engine-xkb-main.c  ibus-engine-xkb-main.h  ibus-simple-engine.c  ibus-simple-engine.h  ibus-xkb-main.c  xkblayout.xml.in  xkblayoutconfig.xml.in  xkblib.c  xkblib.h  xkbxml.c  xkbxml.h
